--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,14 @@ install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
 
+install(
+  DIRECTORY description
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY param
+  DESTINATION share/${PROJECT_NAME}
+)
+
 ament_package()
